styles/index.less
@import "ui-variables";
@import "nord";



// // .thread-icon:not(.thread-icon-unread):not(.thread-icon-star) {
// //   -webkit-filter: invert(100%);
// // }
// // 
// // img.content-dark {
// //   -webkit-filter: invert(100%);
// // }
// // 
// // img.content-light {
// //   -webkit-filter: invert(100%);
// // }
// // 
// // .mail-label {
// //   -webkit-filter: contrast(110%) brightness(85%);
// // }
// 
// // #message-list .message-item-wrap .message-item-white-wrap {
// //  box-shadow: 0 0 0.5px rgba(255, 255, 255, 0.28),
// //     0 1px 1.5px rgba(255, 255, 255, 0.08);
// // }
// // 
// // .thread-list .list-item:not(.unread):not(.selected):not(.focused) {
// //   color: #aaa;
// // }
// 
// //============================================
// 
// // body.platform-win32 .sheet-toolbar-container {
// //   // background-color: @nord4;
// // }
// 
// .sheet-toolbar {
//   border-bottom: 1px solid @border-color-divider;
//   border-bottom: none;
//   box-shadow: none;
//   height: 34px;
//   min-height: 34px;
//   max-height: 34px;
// }
// 

.sheet-toolbar {
  border-bottom: 1px solid @border-color-divider;
}

// SIDEBAR
.toolbar-RootSidebar {
  background-color: @nord0;
  height: 34px;
}

.account-sidebar .outline-view:first-child .heading span {
  text-transform: uppercase;
  letter-spacing: .8px;
  color: @nord4;
  font-weight: 300;
}

.sheet-toolbar .btn-toolbar img.content-mask,
.toolbar-activity .activity-toolbar-icon {
  background-color: @nord6 !important;
}

.outline-view .heading {
  color: @nord6;
  padding-top: 5px;
  padding-bottom: 5px;
}

.disclosure-triangle div {
  border-left-color: @nord4;
}

.outline-view .item img.content-mask {
  background-color: @nord6;
}

.outline-view .item {
  color: @nord6;
}

.outline-view .item-container {
  padding: 1px 0;
}

.scrollbar-track {
  border-left: none;
  background: @nord0;
}

.scrollbar-track .scrollbar-handle {
  border: none;
  background-color: @nord3;
  border-radius: 5px !important;
}

body.platform-win32 .item-count-box {
  border-radius: 3px !important;
}

.sidebar-activity {
  box-shadow: none;
  color: @nord0;
  font-weight: 600;
}


// THREAD LIST
.thread-list .list-item, 
.draft-list .list-item {
  border-bottom: 1px solid @border-color-divider;
}

// TYPES OF MESSAGES IN THREAD LIST:
// 1. OLD READ MSG
.list-item.list-tabular-item {
  background: @nord6-1;
}
.list-item.list-tabular-item:hover {
  background: @nord5;
}

// 2. NEW UNREAD MSG
.list-item.list-tabular-item.unread,
.thread-list .unread:not(.focused):not(.selected),
.draft-list .unread:not(.focused):not(.selected) {
  background: @nord6-1;
}
.list-item.list-tabular-item.unread:hover,
.thread-list .unread:not(.focused):not(.selected):hover,
.draft-list .unread:not(.focused):not(.selected):hover  {
  background: @nord6;
}

// 3. FOCUSED MSG THAT I'M READING NOW
.list-item.list-tabular-item.focused,
body.is-blurred .list-container .list-item.focused {
  background: @nord6-0;
}
.list-item.list-tabular-item.focused:hover {
  background: @nord6-0;
}



.sheet-toolbar .btn-toolbar img.content-mask{
  background-color: @nord0;
}
body.platform-win32 .sheet-toolbar-container .btn-toolbar:hover {
  background-color: @nord4;
}

#message-list .message-subject {
  color: @nord0;
}

#message-list .message-item-wrap,
#message-list .message-item-wrap .message-item-white-wrap,
#message-list .message-item-wrap .message-item-white-wrap.composer-outer-wrap {
  background: #fff;
}

body.platform-win32 .button-dropdown .primary-item,
body.platform-win32 .button-dropdown .secondary-picker {
  box-shadow:0 0 0 1px rgba(76, 86, 106, 0.8) ;
}



// TOOLBAR FIX. 
// New order: del, spam, archive
.sheet-toolbar .message-toolbar-items {
  order: -300;
}
.sheet-toolbar .message-toolbar-items .button-group:first-child {
  flex-direction: row-reverse;
}

